[tool.poetry]
name = "niceguiToolkit"
version = "0.1.3"
description = "toolkit for nicegui"
authors = ["CrystalWindSnake <568166495@qq.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/CrystalWindSnake/ex4nicegui"
keywords = ["nicegui", "webui"]

[tool.poetry.dependencies]
python = "^3.8"
nicegui = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
