[tool.poetry]
name = "niceguiToolkit"
packages = [{include = "nicegui_toolkit"}]
version = "0.2.0"
description = "toolkit for nicegui"
authors = ["CrystalWindSnake <568166495@qq.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/CrystalWindSnake/nicegui-toolkit"
keywords = ["nicegui", "webui"]

[tool.poetry.dependencies]
python = "^3.8"
nicegui = "^2.0.0"
executing = "^2.1.0"
asttokens = "^2.4.1"

[tool.poetry.group.dev.dependencies]
nicegui = "*"
pytest = "^8.3.3"
pandas = [
    {version = "^1.0.0", python = "~3.8"},
    {version = "^2.0.0", python = ">=3.9,<3.13"}
]
numpy = [
    {version = "^1.24.0", python = "~3.8"},
    {version = "^1.26.0", python = ">=3.9,<3.13"}
]
pyecharts = "^2.0.5"
pytest-playwright = "0.5.0"
playwright = "1.43.0"
pytest-asyncio = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
