[project]
name = "niceguiToolkit"
version = "0.3.0"
description = "toolkit for nicegui."
keywords = ["nicegui", "webui", "tool"]
Repository = "https://github.com/CrystalWindSnake/nicegui-toolkit"
authors = [
    {name = "CrystalWindSnake",email = "568166495@qq.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "nicegui~=3.5",
    "executing>=2.1.0",
    "asttokens>=2.4.1"
]

[dependency-groups]
dev = [
    "pytest~=8.3.3",
    "playwright==1.48.0",
    "pytest~=8.3.5",
    "pytest-asyncio~=0.24.0",
    "pytest-playwright~=0.7.1",
    "pandas>=2.3.3",
    "pyecharts>=2.0.8",
]
git = [
    "pre-commit>=3.5.0",
]
lint = [
    "ruff==0.12.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["nicegui_toolkit"]

[tool.hatch.build.targets.wheel]
packages = ["nicegui_toolkit"]
